Sent new file to crowdin
Former-commit-id: 3cd5c8270cd2911719548727e8e186d3f074ce02

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": "عنوان %{name}",
   "%{name}'s Nexus address": "عنوان Nexus %{name}",
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": "هل تريد بالتأكيد تعطيل التحديث التلقائي؟",
   "Are you sure you want to log out?": "هل تريد بالتأكيد تسجيل الخروج؟",
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": "مؤلف",
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "تحديث تلقائي غير متاح حاليا لحاسبات Mac، برجاء قم بتحديث المحفظة يدويًا في الوقت الحاضر",
   "Auto update (Recommended)": "تحديث تلقائي (مستحسن)",
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": "لا يمكن تمهيد قاعدة البيانات الحديثة في الوضع اليدوي",
   "Cannot find module": "لا يمكن العثور على الوحدة",
   "Cannot install from that location": "لا يمكن التثبيت من هذا الموقع",
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "لا يمكن نقل إلى نفس الحساب",
   "Category": "فئة",
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": "إضغط لنسخ إلى الحافظة",
   "Close": "إغلاق",
-  "Close and go to Github": null,
   "Close and install": "إغلاق و تثبيت",
-  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "إغلاق المحفظة وتثبيت التحديث الآن؟",
   "Closing Nexus Wallet": "يتم إغلاق المحفظة",
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": "رفض",
   "Display Test Transactions on the Transactions page": "عرض معاملات اختبار وهمية في صفحة المعاملات",
   "Display name": "عرض الاسم",
+  "Don't show this again": null,
   "Download Recent Database": "تحميل قاعدة البيانات حديثية",
   "Download recent database?": "تحميل قاعدة البيانات حديثية؟",
   "Download transactions history": "تحميل تاريخ المعاملات",
@@ -254,6 +253,8 @@
   "IP address": "عنوان IP",
   "IP address configured for manual Core.": "عنوان IP مكون للوضع اليدوي للنواة.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP / منفذات مسموحة التعدين إليها. منفصل ب<b>;</b> . أحرف البدل معتمدة فقط في IP",
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": "تجاهل",
   "Immature": "غير ناضج",
@@ -314,7 +315,9 @@
   "Market Price": "سعر السوق",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "رسالة",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "اقل مبلغ",
   "Minimize on close": "تصغير عند الإغلاق",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": "نسخة جديدة من المحفظة %{version} - جاهز للتثبيت!",
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": "نسخة جديدة من المحفظة %{version} متاحة. يتم تحميل...",
   "Next": "التالى",
   "Nexus Addresses format": "تنسيق عناوين Nexus",
@@ -423,6 +427,7 @@
   "Phone Number": "رقم الهاتف",
   "Phone number": "رقم الهاتف",
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": "برجاء الانتظار ببدء النواة.",
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": "حدد<file>ملف أرشيف</file>للنواة أو <dir>دليل</dir>",
   "Send": "إرسال",
   "Send NXS": "إرسال NXS",
+  "Send NXS manually": null,
   "Send To multiple recipients": "إرسال إلى مستلمين عدة",
   "Send all": "إرسال الكل",
   "Send anonymous usage data": "إرسال بيانات الاستخدام مجهولة",
@@ -644,6 +650,7 @@
   "Yes, abort": "نعم، أحبط",
   "Yes, let's bootstrap it": "نعم، قم بتمهيدها",
   "You are not logged in": "لم يتم دخولك",
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": "تحتاج إلى تسجيل الدخول إلى محفظتك قبل إرسال المعاملات",
   "You're not logged in": null,
