--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": "%{name}'s Adresse",
   "%{name}'s Nexus address": "%{name}'s Nexus Adresse",
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": "Sind Sie sich sicher, dass Sie das automatische Update deaktivieren wollen?",
   "Are you sure you want to log out?": "Sind Sie sicher dass Sie ausloggen wollen?",
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": "Autor",
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Das Auto Update ist noch nicht für Mac verfügbar, bitte aktualisieren Sie das Wallet vorerst manuell",
   "Auto update (Recommended)": "Automatisches Update (Empfohlen)",
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": "Das Bootstrapen kann im manuellen Modus nicht gestartet werden",
   "Cannot find module": "Modul kann nicht gefunden werden",
   "Cannot install from that location": "Die Installation von diesem Verzeichnis aus ist nicht möglich",
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "Kann nicht auf das gleiche Konto überwiesen werden",
   "Category": "Kategorie",
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": "Zum Kopieren in die Zwischenablage klicken",
   "Close": "Schließen",
-  "Close and go to Github": "Schließen und zu Github gehen",
   "Close and install": "Schließen und installieren",
-  "Close the wallet and go to GitHub?": "Konto beenden und zu Github gehen?",
   "Close the wallet and install update now?": "Wallet schließen und Update jetzt installieren?",
   "Closing Nexus Wallet": "Nexus schließen",
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": "Verwerfen",
   "Display Test Transactions on the Transactions page": "Test Transaktionen auf der Transaktionsseite anzeigen",
   "Display name": "Anzeigename",
+  "Don't show this again": null,
   "Download Recent Database": "Letzte Datenbank herunterladen",
   "Download recent database?": "Letzte Datenbank herunterladen?",
   "Download transactions history": "Transaktionsverlauf herunterladen",
@@ -254,6 +253,8 @@
   "IP address": "IP Adresse",
   "IP address configured for manual Core.": "IP Adresse für den manuellen Daemon konfiguriert.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Ports dürfen abgebaut werden. Separate von <b>;</b> . Wildcards werden nur in IP unterstützt",
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": "Ignorieren",
   "Immature": "Unreif",
@@ -314,7 +315,9 @@
   "Market Price": "Marktpreis",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "Nachricht",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "Mindestbetrag",
   "Minimize on close": "Beim Schließen minimieren",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": "Neue Wallet-Version %{version} - Bereit zum Installieren!",
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": "Neue Wallet-Version %{version} verfügbar. Herunterladen...",
   "Next": "Nächster",
   "Nexus Addresses format": "Nexus Adressen Format",
@@ -423,6 +427,7 @@
   "Phone Number": "Telefonnummer",
   "Phone number": "Telefonnummer",
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": "Nexus Core wird gestartet, bitte warten.",
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": "Wählen Sie die Modul <file>-Archiv-Datei</file> oder <dir>Verzeichnis</dir>",
   "Send": "Senden",
   "Send NXS": "Nexus Senden",
+  "Send NXS manually": null,
   "Send To multiple recipients": "An mehrere Empfänger senden",
   "Send all": "Alle senden",
   "Send anonymous usage data": "Nutzungsdaten anonym senden",
@@ -644,6 +650,7 @@
   "Yes, abort": "Ja, Abbruch",
   "Yes, let's bootstrap it": "Ja, lass es bootstrapen",
   "You are not logged in": "Sie sind nicht eingeloggt",
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": "Sie müssen sich einloggen, bevor Sie etwas überweisen können",
   "You're not logged in": null,
