--- a/assets/translations/en.csv
+++ b/assets/translations/en.csv
@@ -1,5 +1,3 @@
-"4","4"
-"10000","10000"
 " (Owned by you)"," (Owned by you)"
 "%{name}'s Address","%{name}'s Address"
 "%{name}'s Nexus address","%{name}'s Nexus address"
@@ -52,6 +50,7 @@
 "Are you sure you want to disable auto update?","Are you sure you want to disable auto update?"
 "Are you sure you want to log out?","Are you sure you want to log out?"
 "Are you sure you want to switch to Legacy Mode?","Are you sure you want to switch to Legacy Mode?"
+"Attention","Attention"
 "Author","Author"
 "Auto Update is not yet available on Mac, please update the wallet manually for the time being","Auto Update is not yet available on Mac, please update the wallet manually for the time being"
 "Auto update (Recommended)","Auto update (Recommended)"
@@ -82,6 +81,7 @@
 "Cannot bootstrap recent database in manual mode","Cannot bootstrap recent database in manual mode"
 "Cannot find module","Cannot find module"
 "Cannot install from that location","Cannot install from that location"
+"Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.","Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake."
 "Cannot move to the same account","Cannot move to the same account"
 "Category","Category"
 "Change","Change"
@@ -101,9 +101,7 @@
 "Clear peer connections","Clear peer connections"
 "Click to copy to clipboard","Click to copy to clipboard"
 "Close","Close"
-"Close and go to Github","Close and go to Github"
 "Close and install","Close and install"
-"Close the wallet and go to GitHub?","Close the wallet and go to GitHub?"
 "Close the wallet and install update now?","Close the wallet and install update now?"
 "Closing Nexus Wallet","Closing Nexus Wallet"
 "Coinbase transaction","Coinbase transaction"
@@ -177,6 +175,7 @@
 "Dismiss","Dismiss"
 "Display Test Transactions on the Transactions page","Display Test Transactions on the Transactions page"
 "Display name","Display name"
+"Don't show this again","Don't show this again"
 "Download Recent Database","Download Recent Database"
 "Download recent database?","Download recent database?"
 "Download transactions history","Download transactions history"
@@ -253,6 +252,8 @@
 "IP address","IP address"
 "IP address configured for manual Core.","IP address configured for manual Core."
 "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP","IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP"
+"If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.","If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user."
+"If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.","If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user."
 "If you need to switch back to Legacy Mode, you can select "%{menu}" menu option at any time.","If you need to switch back to Legacy Mode, you can select "%{menu}" menu option at any time."
 "Ignore","Ignore"
 "Immature","Immature"
@@ -323,7 +324,9 @@
 "Market Price","Market Price"
 "Max Supply","Max Supply"
 "Max amount of tokens available","Max amount of tokens available"
+"Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.","Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account."
 "Message","Message"
+"Migrate account","Migrate account"
 "Migrate stake","Migrate stake"
 "Min amount","Min amount"
 "Minimize on close","Minimize on close"
@@ -371,7 +374,8 @@
 "New tokens's name","New tokens's name"
 "New transaction","New transaction"
 "New user %{username} has been created","New user %{username} has been created"
-"New wallet version %{version} - Ready to install!","New wallet version %{version} - Ready to install!"
+"New wallet version %{version} - Click here to download","New wallet version %{version} - Click here to download"
+"New wallet version %{version} - Click here to update","New wallet version %{version} - Click here to update"
 "New wallet version %{version} available. Downloading...","New wallet version %{version} available. Downloading..."
 "Next","Next"
 "Nexus Addresses format","Nexus Addresses format"
@@ -432,6 +436,7 @@
 "Phone Number","Phone Number"
 "Phone number","Phone number"
 "Pin must be at least 4 characters","Pin must be at least 4 characters"
+"Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first","Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first"
 "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}","Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}"
 "Please wait for Nexus Core to start.","Please wait for Nexus Core to start."
 "Please wait, this may take up to 30 seconds","Please wait, this may take up to 30 seconds"
@@ -504,6 +509,7 @@
 "Select module's <file>archive file</file> or <dir>directory</dir>","Select module's <file>archive file</file> or <dir>directory</dir>"
 "Send","Send"
 "Send NXS","Send NXS"
+"Send NXS manually","Send NXS manually"
 "Send To multiple recipients","Send To multiple recipients"
 "Send all","Send all"
 "Send anonymous usage data","Send anonymous usage data"
@@ -661,6 +667,7 @@
 "Yes, abort","Yes, abort"
 "Yes, let's bootstrap it","Yes, let's bootstrap it"
 "You are not logged in","You are not logged in"
+"You have %{amount} NXS in your legacy account.","You have %{amount} NXS in your legacy account."
 "You have successfully created token %{token} ! Would you like to make an account for this token?","You have successfully created token %{token} ! Would you like to make an account for this token?"
 "You need to log in to your wallet before sending transactions","You need to log in to your wallet before sending transactions"
 "You're not logged in","You're not logged in"
