--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": "%{name}'s Osoite",
   "%{name}'s Nexus address": "%{name}'s Nexus osoite",
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": "Oletko varma, että haluat ottaa pois päältä automaattiset päivitykset?",
   "Are you sure you want to log out?": "Oletko varma että haluat kirjautua ulos?",
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": "Tekijä",
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Automaattiset päivitykset eivät vielä ole saatavilla Macilla, päivitäthän lompakkosi manuaalisesti toistaiseksi",
   "Auto update (Recommended)": "Automaattinen päivitys (Suositeltu)",
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": "Tietokantaa ei voi esiladata manuaalisessa tilassa",
   "Cannot find module": "Moduulia ei löydy",
   "Cannot install from that location": "Ei voida asentaa tuosta sijainnista",
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "Ei voi siirtää samalle tilille",
   "Category": "Kategoria",
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": "Kopioi leikepöydälle",
   "Close": "Sulje",
-  "Close and go to Github": "Sulje ja siirry Githubiin",
   "Close and install": "Sulje ja asenna",
-  "Close the wallet and go to GitHub?": "Sulje lompakko ja siirry Githubiin?",
   "Close the wallet and install update now?": "Haluatko sulkea lompakon ja asentaa nyt?",
   "Closing Nexus Wallet": "Suljetaan Nexus Lompakko",
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": "Hylkää",
   "Display Test Transactions on the Transactions page": "Näytä Testi Rahansiirrot Rahansiirto sivulla",
   "Display name": "Näyttönimi",
+  "Don't show this again": null,
   "Download Recent Database": "Lataa Tuore Tietokanta",
   "Download recent database?": "Lataa tuore tietokanta?",
   "Download transactions history": "Lataa rahansiirtohistoria",
@@ -254,6 +253,8 @@
   "IP address": "IP osoite",
   "IP address configured for manual Core.": "IP osoite konfiguroitu manuaaliselle Ytimelle.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Portit joiden sallitaan louhivan. Erottele <b>;</b>. Villikortit sallittuja vain IP:ssä",
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": "Ohita",
   "Immature": "Kypsymätön",
@@ -314,7 +315,9 @@
   "Market Price": "Markkinahinta",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "Viesti",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "Vähimmäismäärä",
   "Minimize on close": "Pienennä suljettaessa",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": "Uusi lompakko versio %{version} - Valmiina asennettavaksi!",
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": "Uusi lompakko versio %{version} saatavilla. Ladataan...",
   "Next": "Seuraava",
   "Nexus Addresses format": "Nexus Osoitteen formaatti",
@@ -423,6 +427,7 @@
   "Phone Number": "Puhelinnumero",
   "Phone number": "Puhelinnumero",
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": "Odota, että Nexus Ydin käynnistyy.",
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": "Valitse moduulin <file>arkisto tiedosto</file> tai <dir>hakemisto</dir>",
   "Send": "Lähetä",
   "Send NXS": "Lähetä NXS",
+  "Send NXS manually": null,
   "Send To multiple recipients": "Lähetä usealle vastaanottajalle",
   "Send all": "Lähetä kaikki",
   "Send anonymous usage data": "Lähetä anonyymiä käyttötietoa",
@@ -644,6 +650,7 @@
   "Yes, abort": "Kyllä, lopeta",
   "Yes, let's bootstrap it": "Kyllä, esiladataan se",
   "You are not logged in": "Et ole kirjautunut sisään",
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": "Sinun täytyy kirjautua sisään ennen kuin voit siirtää rahaa",
   "You're not logged in": null,
