--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": "Adresse de %{name}",
   "%{name}'s Nexus address": "Adresse Nexus de %{name}",
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": "Êtes-vous sûr(e) de vouloir désactiver la mise à jour automatique ?",
   "Are you sure you want to log out?": "Êtes-vous sûr(e) de vouloir vous déconnecter ?",
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": "Auteur",
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "La mise à jour automatique n'est pas encore disponible pour Mac, veuillez mettre à jour le portefeuille manuellement pour le moment",
   "Auto update (Recommended)": "Mise à jour automatique (recommandé)",
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": "Impossible d'amorcer la base de données récente en mode manuel",
   "Cannot find module": "Module introuvable",
   "Cannot install from that location": "Impossible d'installer depuis cet emplacement",
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "Impossible de transférer vers le même compte",
   "Category": "Catégorie",
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": "Cliquez pour copier dans le presse-papiers",
   "Close": "Fermeture",
-  "Close and go to Github": null,
   "Close and install": "Fermer et installer",
-  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "Fermer le portefeuille et installer la mise à jour maintenant ?",
   "Closing Nexus Wallet": "Fermeture du portefeuille Nexus",
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": "Ignorer",
   "Display Test Transactions on the Transactions page": "Afficher les transactions de test sur la page des transactions",
   "Display name": "Nom d'affichage",
+  "Don't show this again": null,
   "Download Recent Database": "Télécharger la base de données récente",
   "Download recent database?": "Télécharger la base de données récente ?",
   "Download transactions history": "Télécharger l'historique des transactions",
@@ -254,6 +253,8 @@
   "IP address": "Adresse IP",
   "IP address configured for manual Core.": "Adresse IP configurée pour le daemon manuel.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Ports autorisés à miner. Séparez-les par <b>;</b> . Métacaractères supportés uniquement en IP",
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": "Ignorer",
   "Immature": "Immature",
@@ -314,7 +315,9 @@
   "Market Price": "Prix du marché",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "Message",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "Montant minimum",
   "Minimize on close": "Minimiser à la fermeture",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": "Nouvelle version du portefeuille %{version} - Prêt à installer !",
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": "Nouvelle version du portefeuille %{version} disponible. Téléchargement...",
   "Next": "Suivant",
   "Nexus Addresses format": "Format des adresses Nexus",
@@ -423,6 +427,7 @@
   "Phone Number": "Numéro de téléphone",
   "Phone number": "Numéro de téléphone",
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": "Veuillez attendre que le noyau Nexus démarre.",
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": "Sélectionnez <file>le fichier d'archive</file> ou le <dir>répertoire</dir> du module",
   "Send": "Envoyer",
   "Send NXS": "Envoyer NXS",
+  "Send NXS manually": null,
   "Send To multiple recipients": "Envoyer à plusieurs destinataires",
   "Send all": "Tout envoyer",
   "Send anonymous usage data": "Envoyer des données d'usage anonymes",
@@ -644,6 +650,7 @@
   "Yes, abort": "Oui, abandonner",
   "Yes, let's bootstrap it": "Oui, l'amorcer",
   "You are not logged in": "Vous n'êtes pas connecté(e)",
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": "Vous devez vous connecter à votre portefeuille pour pouvoir envoyer des transactions",
   "You're not logged in": null,
