--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": "%{name} Címe",
   "%{name}'s Nexus address": "%{name} Nexus címe",
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": "Biztos benne, hogy letiltja az automatikus frissítést?",
   "Are you sure you want to log out?": "Biztosan ki szeretnél jelentkezni?",
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": "Készítő",
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Az automatikus frissítés még nem érhető el a Mac rendszeren. Kérjük, frissítse a pénztárcát egyelőre kézzel",
   "Auto update (Recommended)": "Automatikus frissítés (Ajánlott)",
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": "Nem lehet betölteni a legutóbbi adatbázist kézi módban",
   "Cannot find module": "Nem található a modul",
   "Cannot install from that location": "Nem lehet telepíteni innen",
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "Nem lehet áthelyezni ugyanarra a fiókra",
   "Category": "Kategória",
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": "Kattints ide a vágólapra helyezéshez",
   "Close": "Bezár",
-  "Close and go to Github": "Zárja be és menjen a GitHub-hoz",
   "Close and install": "Zárja be és telepítse",
-  "Close the wallet and go to GitHub?": "Zárja be a tárcáját, és menjen a GitHub-hoz?",
   "Close the wallet and install update now?": "A pénztárcából most kilépni és a frissítést telepíteni?",
   "Closing Nexus Wallet": "Kilépés a Nexus Pénztárcából",
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": "Elutasít",
   "Display Test Transactions on the Transactions page": "A Teszt tranzakciók megjelenítése a Tranzakciók oldalon",
   "Display name": "Megjelenítendő név",
+  "Don't show this again": null,
   "Download Recent Database": "Friss adatbázis letöltése",
   "Download recent database?": "Friss adatbázist letölteni?",
   "Download transactions history": "Korábbi tranzakciók letöltése",
@@ -254,6 +253,8 @@
   "IP address": "IP cím",
   "IP address configured for manual Core.": "IP cím a kézi Core-hoz konfigurálva.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Port-ok ahova a bányászat engedélyezett. Válaszd el <b>;</b>-vel. Helyettesítő karaktereket csak az IP-val lehet használni",
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": "Ignorál",
   "Immature": "Éretlen",
@@ -314,7 +315,9 @@
   "Market Price": "Piaci Ár",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "Üzenet",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "Min mennyiség",
   "Minimize on close": "Bezáráskor kis méret",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": "Új pénztárca verzió %{version} - Telepítésre kész!",
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": "Új pénztárca verzió %{version} érhető el. Letöltés...",
   "Next": "Tovább",
   "Nexus Addresses format": "Nexus Címek formátuma",
@@ -423,6 +427,7 @@
   "Phone Number": "Telefonszám",
   "Phone number": "Telefonszám",
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": "Kérjük, várjon, amíg a Nexus Core elindul.",
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": "Válassza ki a modul <file>archívum fájl</file>-ját vagy <dir>könyvtár</dir>-át",
   "Send": "Küldés",
   "Send NXS": "NXS Küldése",
+  "Send NXS manually": null,
   "Send To multiple recipients": "Küldés több címzettnek",
   "Send all": "Összes küldése",
   "Send anonymous usage data": "Anonimizált használati adatok küldése",
@@ -644,6 +650,7 @@
   "Yes, abort": "Igen, megszakítás",
   "Yes, let's bootstrap it": "Igen, töltsük be",
   "You are not logged in": "Nem vagy bejelentkezve",
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": "A tranzakciók küldése előtt be kell jelentkeznie a pénztárcájába",
   "You're not logged in": null,
