--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": "%{name}y Addresy",
   "%{name}'s Nexus address": "%{name}y Adres Nexus",
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": "Czy na pewno chcesz wyłączyć automatyczną aktualizacje?",
   "Are you sure you want to log out?": "Czy na pewno chcesz się wylogować?",
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": "Autor",
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Automatyczna aktualizacja nie jest jeszcze dostępna na MAC, prosze manualnie zaktualizować portfel",
   "Auto update (Recommended)": "Automatyczna Aktualizacja (Rekomendowane)",
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": "Nie udało się pobrać bazy bootstrap w trybie manualnym",
   "Cannot find module": "Moduł nie odnaleziony",
   "Cannot install from that location": "Nie można zainstalować z tej lokalizacji",
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "Nie można przesunąc srodków na to samo konto",
   "Category": "Kategoria",
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": "Kliknij, aby skopiować",
   "Close": "Zamknij",
-  "Close and go to Github": null,
   "Close and install": "Zamknij i zainstaluj",
-  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "Zamknąć portfel i zainstalować aktualizację?",
   "Closing Nexus Wallet": "Zamykanie portfela Nexus",
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": "Odrzuć",
   "Display Test Transactions on the Transactions page": "Pokazuj transakcje testowe na stronie transakcji",
   "Display name": "Nazwa wyświetlana",
+  "Don't show this again": null,
   "Download Recent Database": "Pobierz aktualną bazę danych",
   "Download recent database?": "Pobrać aktualną bazę danych?",
   "Download transactions history": "Pobierz historię transakcji",
@@ -254,6 +253,8 @@
   "IP address": "Adres IP",
   "IP address configured for manual Core.": "Adres IP skonfigurowany dla manual daemon.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": "Zignoruj",
   "Immature": "Niedojrzała",
@@ -314,7 +315,9 @@
   "Market Price": "Cena Rynkowa",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "Wiadomosć",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "Minimalna Kwota",
   "Minimize on close": "Zminimalizować przy zamknięciu",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": "Nowa wersja portfela %{version} - gotowa do zainstalowania!",
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": "Nowa wersja portfela %{version} - Pobieranie...",
   "Next": "Nastepne",
   "Nexus Addresses format": "Format adresów Nexus",
@@ -423,6 +427,7 @@
   "Phone Number": "Numer Telefonu",
   "Phone number": "Numer telefonu",
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": null,
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": null,
   "Send": "Wyslij",
   "Send NXS": "Wyślij NXS",
+  "Send NXS manually": null,
   "Send To multiple recipients": "Wyślij do kilku odbiorców",
   "Send all": null,
   "Send anonymous usage data": "Wyślij anonimowe dane dotyczące użytkownika",
@@ -644,6 +650,7 @@
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
   "You are not logged in": "Nie jesses zalogowany",
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": "Zaloguj sie aby dokonać transakcji",
   "You're not logged in": null,
