--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": "Endereço do %{name}",
   "%{name}'s Nexus address": "endereço das Nexus do %{name}",
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": "Tem certeza de que deseja desativar a atualização automática?",
   "Are you sure you want to log out?": "Tem certeza de que deseja sair?",
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": null,
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "A atualização automática ainda não está disponível no Mac, atualize a carteira manualmente por enquanto",
   "Auto update (Recommended)": "Atualização automática (recomendado)",
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": null,
   "Cannot find module": null,
   "Cannot install from that location": null,
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "Não é possível mover para a mesma conta",
   "Category": null,
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": null,
   "Close": "Fecho",
-  "Close and go to Github": null,
   "Close and install": null,
-  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": null,
   "Closing Nexus Wallet": "Fechando a carteira da Nexus",
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": "Exibir transações de teste na página Transações",
   "Display name": null,
+  "Don't show this again": null,
   "Download Recent Database": null,
   "Download recent database?": null,
   "Download transactions history": null,
@@ -254,6 +253,8 @@
   "IP address": "Endereço IP",
   "IP address configured for manual Core.": "Endereço IP configurado para o daemon manual.",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": null,
   "Immature": "Imaturo",
@@ -314,7 +315,9 @@
   "Market Price": "Preço no mercado",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "Mensagem",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "Min Valor",
   "Minimize on close": "Minimizar ao fechar",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": null,
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": null,
   "Next": "Próximo",
   "Nexus Addresses format": null,
@@ -423,6 +427,7 @@
   "Phone Number": "Número de Telefone",
   "Phone number": null,
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": null,
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": null,
   "Send": "Enviar",
   "Send NXS": "Enviar NXS",
+  "Send NXS manually": null,
   "Send To multiple recipients": "Enviar para vários destinatários",
   "Send all": null,
   "Send anonymous usage data": "Enviar dados de uso anônimos",
@@ -644,6 +650,7 @@
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
   "You are not logged in": "Você não está conectado",
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": "Você precisa de estar com sessão iniciada na sua carteira antes de enviar transações",
   "You're not logged in": null,
