--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": "%{name} 地址",
   "%{name}'s Nexus address": "%{name} Nexus地址",
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": "您确定要禁用自动更新吗？",
   "Are you sure you want to log out?": "确定要退出吗？",
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": "作者",
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Mac上尚未提供自动更新，请暂时手动更新钱包。",
   "Auto update (Recommended)": "自动更新 (推荐)",
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": "无法在手动模式下启动最近的数据库",
   "Cannot find module": "找不到模块",
   "Cannot install from that location": "无法从那个位置安装",
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": "无法移动到同一帐户",
   "Category": "分类",
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": "点击复制到剪贴板",
   "Close": "关闭",
-  "Close and go to Github": null,
   "Close and install": "关闭并安装",
-  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "立即关闭钱包并安装更新？",
   "Closing Nexus Wallet": "关闭Nexus钱包",
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": "解除，取消。",
   "Display Test Transactions on the Transactions page": "在“交易”页面上显示“测试交易”",
   "Display name": "显示昵称",
+  "Don't show this again": null,
   "Download Recent Database": "下载最近的数据库",
   "Download recent database?": "下载最近的数据库？",
   "Download transactions history": "下载交易记录",
@@ -254,6 +253,8 @@
   "IP address": "IP 地址",
   "IP address configured for manual Core.": "IP 地址已配置为手动核心。",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/端口允许我自己。由 <b>分隔；</b> 。威尔德卡只在 IP 支持",
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": "忽略",
   "Immature": "未成熟",
@@ -314,7 +315,9 @@
   "Market Price": "市场 价格",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "消息",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "最小金额",
   "Minimize on close": "关闭时最&小化",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": "新的钱包版本 %{version} - 准备安装！",
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": "新的钱包版本 %{version} 可用。正在下载...",
   "Next": "下一个",
   "Nexus Addresses format": "Nexus 地址格式",
@@ -423,6 +427,7 @@
   "Phone Number": "电话号码",
   "Phone number": "电话号码",
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": "请等待 Nexus 核心开始。",
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": "选择模块 <file>存档文件</file> 或 <dir>目录</dir>",
   "Send": "发送",
   "Send NXS": "发送NXS",
+  "Send NXS manually": null,
   "Send To multiple recipients": "发送给多个收件人",
   "Send all": "发送全部",
   "Send anonymous usage data": "发送匿名使用数据",
@@ -644,6 +650,7 @@
   "Yes, abort": "是，中止",
   "Yes, let's bootstrap it": "是的，让我们来引导吧",
   "You are not logged in": "您尚未登录",
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": "在发送交易之前，您需要登录到您的钱包",
   "You're not logged in": null,
