--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -1,6 +1,4 @@
 {
-  "4": null,
-  "10000": null,
   " (Owned by you)": null,
   "%{name}'s Address": null,
   "%{name}'s Nexus address": null,
@@ -53,6 +51,7 @@
   "Are you sure you want to disable auto update?": null,
   "Are you sure you want to log out?": null,
   "Are you sure you want to switch to Legacy Mode?": null,
+  "Attention": null,
   "Author": null,
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": null,
   "Auto update (Recommended)": null,
@@ -83,6 +82,7 @@
   "Cannot bootstrap recent database in manual mode": null,
   "Cannot find module": null,
   "Cannot install from that location": null,
+  "Cannot migrate stake since this Tritium user has already started staking before. Please create a new user if you still want to migrate your stake.": null,
   "Cannot move to the same account": null,
   "Category": null,
   "Change": null,
@@ -102,9 +102,7 @@
   "Clear peer connections": null,
   "Click to copy to clipboard": null,
   "Close": "閉じる",
-  "Close and go to Github": null,
   "Close and install": null,
-  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": null,
   "Closing Nexus Wallet": null,
   "Coinbase transaction": null,
@@ -178,6 +176,7 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
+  "Don't show this again": null,
   "Download Recent Database": null,
   "Download recent database?": null,
   "Download transactions history": null,
@@ -254,6 +253,8 @@
   "IP address": "IPアドレス",
   "IP address configured for manual Core.": "手動デーモン用に設定されたIPアドレス",
   "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
+  "If you have been staking with your legacy account, click Migrate stake button below to move both your stake amount and your trust score to this new Tritium user.": null,
+  "If you have never started staking, or have already migrated your stake, you can manually send your funds from legacy account to this new Tritium user.": null,
   "If you need to switch back to Legacy Mode, you can select \"%{menu}\" menu option at any time.": null,
   "Ignore": "無視する",
   "Immature": null,
@@ -314,7 +315,9 @@
   "Market Price": "市場価格",
   "Max Supply": null,
   "Max amount of tokens available": null,
+  "Memorize or back up your username, password and PIN carefully. If you lose them, no one can help you get access to your own account.": null,
   "Message": "メッセージ",
+  "Migrate account": null,
   "Migrate stake": null,
   "Min amount": "最小金額",
   "Minimize on close": "終了時に最小化",
@@ -362,7 +365,8 @@
   "New tokens's name": null,
   "New transaction": null,
   "New user %{username} has been created": null,
-  "New wallet version %{version} - Ready to install!": null,
+  "New wallet version %{version} - Click here to download": null,
+  "New wallet version %{version} - Click here to update": null,
   "New wallet version %{version} available. Downloading...": null,
   "Next": "次",
   "Nexus Addresses format": null,
@@ -423,6 +427,7 @@
   "Phone Number": "電話番号",
   "Phone number": null,
   "Pin must be at least 4 characters": null,
+  "Please keep in mind that you may lose your legacy trust score if you send NXS manually from your legacy account without migrating your stake first": null,
   "Please make sure that you are using the same machine that you used to stake with your legacy wallet, or you have put your staking wallet.dat file into %{path}": null,
   "Please wait for Nexus Core to start.": null,
   "Please wait, this may take up to 30 seconds": null,
@@ -495,6 +500,7 @@
   "Select module's <file>archive file</file> or <dir>directory</dir>": null,
   "Send": "送信",
   "Send NXS": "送信 NXS",
+  "Send NXS manually": null,
   "Send To multiple recipients": null,
   "Send all": null,
   "Send anonymous usage data": "匿名の使用データを送信する",
@@ -644,6 +650,7 @@
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
   "You are not logged in": null,
+  "You have %{amount} NXS in your legacy account.": null,
   "You have successfully created token %{token} ! Would you like to make an account for this token?": null,
   "You need to log in to your wallet before sending transactions": null,
   "You're not logged in": null,
